@@ -32,11 +32,15 @@ Features
  * Allow admins to lock or delete users and their home projects via new command
  * Users can be declared sub accounts of other users. Useful for automated scripts.
 
-Incompatible changes:
-=====================
+Wanted changes:
+===============
 
  * kiwi builds: build configuration changes from the project where the kiwi 
                 file is stored have always an effect now.
+
+ * maintenance_release requests are locking only the source packages on
+   creation now. They don't lock the patchinfos. The project gets locked on release
+   now.
 
 Notes for systems using systemd:
 ================================
